Bug 2206 - Missing return value in xfree86/xf86config/xorgconfig.c
Summary: Missing return value in xfree86/xf86config/xorgconfig.c
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: App/xorgconfig (show other bugs)
Version: 6.8.1
Hardware: x86 (IA32) All
: high normal
Assignee: Roland Mainz
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-01-03 07:15 UTC by Egbert Eich
Modified: 2005-02-01 00:39 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
[FIXED_X11R68x] Fix. (649 bytes, patch)
2005-01-03 07:33 UTC, Egbert Eich
roland.mainz: 6.8-branch+
Details | Splinter Review
[FIXED_X11R68x] Backout patch (3.07 KB, patch)
2005-02-01 19:36 UTC, Roland Mainz
no flags Details | Splinter Review

Description Egbert Eich 2005-01-03 07:15:08 UTC
The int function screen_configuration() contains:
 	if (card_selected == -1 || (card[card_selected].flags & UNSUPPORTED))
		return;
The attached patch will take care of this.
Comment 1 Egbert Eich 2005-01-03 07:33:19 UTC
Created attachment 1622 [details] [review]
[FIXED_X11R68x] Fix.

Give the function a return value. 0 lets the loop terminate - that's what
should happen if the user pressed 'q' which indicates the user wants to use the
generic fallback driver.
Comment 2 Egbert Eich 2005-01-03 07:42:08 UTC
Fixed in HEAD.
Comment 3 Roland Mainz 2005-01-11 19:23:21 UTC
Comment on attachment 1622 [details] [review]
[FIXED_X11R68x] Fix.

Approved in the 2005-01-10 Xorg release wranglers phone call. Please don't
commit yourself, I'll do that in a few mins...
Comment 4 Roland Mainz 2005-01-11 19:30:29 UTC
Comment on attachment 1622 [details] [review]
[FIXED_X11R68x] Fix.

Patch checked-in into X11R6.8.x stable branch:

/cvs/xorg/xc/ChangeLog,v  <--  ChangeLog
new revision: 1.365.2.110; previous revision: 1.365.2.109
cvs commit: Using deprecated info format strings.  Convert your scripts to use
the new argument format and remove '1's from your info file format strings.
/cvs/xorg/xc/programs/Xserver/hw/xfree86/xf86config/xorgconfig.c,v  <-- 
xorgconfig.c
new revision: 1.6.2.1; previous revision: 1.6
cvs commit: Using deprecated info format strings.  Convert your scripts to use
the new argument format and remove '1's from your info file format strings.
Mailing the commit message to xorg-commit@lists.freedesktop.org...
Comment 5 Roland Mainz 2005-02-01 19:34:50 UTC
Reopening bug for backout from X11R6.8.x stable branch as this patch broke the
build there...
Comment 6 Roland Mainz 2005-02-01 19:35:16 UTC
Taking bug myself for backout...
Comment 7 Roland Mainz 2005-02-01 19:36:21 UTC
Created attachment 1813 [details] [review]
[FIXED_X11R68x] Backout patch
Comment 8 Roland Mainz 2005-02-01 19:38:46 UTC
Comment on attachment 1813 [details] [review]
[FIXED_X11R68x] Backout patch

Patch checked-in into X11R6.8.x stable branch:

/cvs/xorg/xc/ChangeLog,v  <--  xc/ChangeLog
new revision: 1.365.2.148; previous revision: 1.365.2.147
cvs commit: Using deprecated info format strings.  Convert your scripts to use
the new argument format and remove '1's from your info file format strings.
/cvs/xorg/xc/programs/Xserver/hw/xfree86/xf86config/xorgconfig.c,v  <-- 
xc/programs/Xserver/hw/xfree86/xf86config/xorgconfig.c
new revision: 1.6.2.3; previous revision: 1.6.2.2
cvs commit: Using deprecated info format strings.  Convert your scripts to use
the new argument format and remove '1's from your info file format strings.
Mailing the commit message to xorg-commit@lists.freedesktop.org...
Comment 9 Roland Mainz 2005-02-01 19:39:08 UTC
Marking bug as FIXED again.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.