//bugs.freedesktop.org/show_bug.cgi?id=2206) attachment #1622     (https://bugs.freedesktop.org/attachment.cgi?id=1622): Fix missing     return value in xf86config. Patch by Egbert Eich     <eich@freedesktop.org>.